Task5/non-admin-api-allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-front-to-back
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-to-back
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
  policyTypes:
    - Ingress
